--- a/index.html
+++ b/index.html
@@ -21,14 +21,22 @@
     Rock, the versatile Paper, or the sharp Scissors? It's a game of chance and strategy, where each choice can lead to
     victory or Lose or a Tie. Can you outsmart the computer and become the Rock, Paper, Scissors champion? Click the buttons below
     to make your move and find out!
-    Have fun and may the best hand win!<br>
+    Have fun and may the best hand win!<br><br>
+    <span class="key-mapping">Key Mapping:</span><br>
+    Rock  - 'r'<br>
+    Paper - 'p'<br>
+    Scissor - 's'<br>
+    Reset Score - 'q'<br>
+    Auto Play - 'a'<br>
+    Stop Auto Play - 'a'
+    <br><br>
     <span class="note-word">Note:</span>
     Strong Player will get 50 wins within 1 minute.
   </div>
   <div class="buttons">
-    <button class="button-emojis" onclick="play('rock')"><img class="player-emojis" src="rock-emoji.png"
+    <button class="button-emojis rock-button" onclick="play('rock')"><img class="player-emojis" src="rock-emoji.png"
         alt=""></button>
-    <button class="button-emojis" onclick="play('paper')"><img class="player-emojis" src="paper-emoji.png"
+    <button class="button-emojis paper-button" onclick="play('paper')"><img class="player-emojis" src="paper-emoji.png"
         alt=""></button>
     <button class="button-emojis scissor-button" onclick="play('scissors')"><img class="player-emojis" src="scissors-emoji.png"
         alt=""></button>
@@ -38,6 +46,13 @@
     <div class="result"></div>
     <div class="update-score"></div>
     <button onclick="resetScore()" class="reset-score">Reset Score</button>
+    <button onclick="autoPlay()" class="auto-play">Auto Play</button>
+  </div>
+  <div class="my-info">
+    <p class="website-title">Check out my other website:</p>
+    <center>
+      <a target="_blank" class="website" href="https://abinesh-srinivasan.github.io/number-guessing-game/">Number Guessing Game</a>
+    </center>
   </div>
   <script src="rock paper game.js"></script>
 </body>
